Fri Nov 13 10:17:33 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * orbsvcs/tests/FaultTolerance/IOGRManipulation/run_test.pl:
          
       Warring in fuzz build was fixed.

Fri Nov 13 09:18:57 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * orbsvcs/tests/Bug_3486_Regression/run_test.pl:
        * orbsvcs/tests/FaultTolerance/IOGRManipulation/run_test.pl:
        * orbsvcs/tests/Notify/Bug_3663_Regression/run_test.pl:
        * orbsvcs/tests/Notify/Bug_3646d_Regression/run_test.pl:
        * orbsvcs/tests/Bug_2137_Regression/run_test.pl:
        * DevGuideExamples/LocalObjects/ServantLocator/MessengerServer.cpp:
        * DevGuideExamples/LocalObjects/ServantLocator/MessengerClient.cpp:
        * DevGuideExamples/LocalObjects/ServantLocator/run_test.pl:
        * DevGuideExamples/RTCORBA/MessengerServer.cpp:
        * DevGuideExamples/RTCORBA/MessengerClient.cpp:
        * DevGuideExamples/RTCORBA/run_test.pl:
        * tests/Stack_Recursion/run_test.pl:
        * tests/Timed_Buffered_Oneways/run_test.pl:
        * tests/Bug_2234_Regression/client.cpp:
        * tests/Bug_2234_Regression/server.cpp:
        * tests/Bug_2234_Regression/run_test.pl:
        * tests/Bug_2768_Regression/server.cpp:
        * tests/Bug_2768_Regression/run_test.pl:
        * tests/Blocking_Sync_None/run_test.pl:
        * tests/Crash_On_Write/run_test.pl:
        * tests/Bug_3068_Regression/run_test.pl:
        * tests/CSD_Strategy_Tests/TP_Test_Dynamic/run_test.pl:
        * tests/Bug_2683_Regression/server.cpp:
        * tests/Bug_2683_Regression/run_test.pl:
        * tests/RTScheduling/Scheduling_Interceptor/run_test.pl:
        * tests/File_IO/run_test.pl:
        * tests/Bug_1568_Regression/run_test.pl:
        * tests/Reliable_Oneways/run_sync_with_transport.pl:
        * tests/Reliable_Oneways/run_sync_none.pl:
        * tests/Reliable_Oneways/run_sync_with_server.pl:
        * tests/Reliable_Oneways/run_sync_with_target.pl: